# parakeet-mlx

./: .gitignore  README.md  pyproject.toml  realtime_microphone_transcription.py
parakeet_mlx/: __init__.py
parakeet_mlx/audio/: __init__.py  alignment.py  filler_filtering.py  noise_reduction.py  processing.py
parakeet_mlx/core/: async_processor.py  audio_sources.py  config.py  performance.py  transcriber.py
parakeet_mlx/models/: __init__.py  conformer.py  ctc.py  parakeet.py
parakeet_mlx/utils/: __init__.py  device_manager.py  error_handling.py  model_loading.py
