[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parakeet-mlx"
version = "0.0.1"
description = "High-performance NVIDIA Parakeet ASR implementation for Metal MLX Apple Silicon with real-time transcription"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.9.2",
    "huggingface-hub>=0.30.2",
    "librosa>=0.11.0",
    "mlx>=0.22.1",
    "numpy>=2.2.5",
    "typer>=0.15.3",
    "sounddevice>=0.5.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "noisereduce>=3.0.3",
]
license = "Apache-2.0"
keywords = [
    "apple",
    "asr",
    "audio-to-text",
    "gpu",
    "machine-learning",
    "macos",
    "metal",
    "ml",
    "mlx",
    "nvidia",
    "open-source",
    "parakeet",
    "python",
    "recognition",
    "speech",
]

[project.urls]
Repository = "https://github.com/EliFuzz/parakeet-mlx.git"
Issues = "https://github.com/EliFuzz/parakeet-mlx/issues"

[project.scripts]
parakeet-mlx = "parakeet_mlx.cli:app"
parakeet-mlx-realtime = "parakeet_mlx.cli.realtime:app"
